--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <section id="main"> image
       <div id="main-text">
         <h1>Derek Liu</h1>
-        <p>Website design</p>
+        <p>Coding and Web Development</p>
       </div>          
     </section>
   
